@@ -1,3 +1,8 @@
+Thu Aug 31 16:06:21 2000  Christopher Faylor <cgf@cygnus.com>
+
+	* errno.cc (set_errno_from_win_error): Actually use arguments to
+	strace_printf.
+
 2000-08-30  DJ Delorie  <dj@redhat.com>
 
 	* times.cc (gettimeofday): use GetSystemTimeAsFileTime to avoid a
